# PrettySheet-wasm

./: .gitignore  LICENSE  README.md  index.html  run-batch.md
.github/workflows/: deploy.yml
assets/: engine_bg-1d5d4598.wasm  engine_bg-4ca61d4a.wasm  engine_bg-6ca1368d.wasm  engine_bg-80b3b2ab.wasm  engine_bg-fa3e429b.wasm  index-19bf6e97.js  index-370e9703.js  index-67862e75.js  index-8ee9ee86.css  index-db4f72d7.js  index-dcde9e72.js  index-def285b9.css  index-f311b2f2.js
client/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: App.tsx
engine/: Cargo.toml
engine/src/: lib.rs  preview.rs
engine/tests/: preview_tests.rs  wasm_tests.rs
engine/tests/fixtures/: valid_excel.xlsx
